--- a/.github/actions/tfmod-action/action.yml
+++ b/.github/actions/tfmod-action/action.yml
@@ -31,9 +31,8 @@ runs:
         DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
       run: |
         set -x
-        diffs="$(git --no-pager diff origin/"${DEFAULT_BRANCH}"...HEAD --name-only --no-color)"
-        IFS=$'\n' read -ra files <<<"${diffs}"
-        echo "files=${files[@]}" >> "${GITHUB_OUTPUT}"
+        files="$(git --no-pager diff origin/"${DEFAULT_BRANCH}"...HEAD --name-only --no-color | xargs  | sed 's/ /,/g')"
+        echo "files=${files}" >> "${GITHUB_OUTPUT}"
       shell: bash
 
     - name: Install tfmod
@@ -63,7 +62,7 @@ runs:
       id: tfmod
       env:
         BASE_DIR: ${{ inputs.base-dir }}
-        DIFF_FILES: ${{ join(steps.diff.outputs.files, ',') }}
+        DIFF_FILES: ${{ steps.diff.outputs.files }}
       run: |
         set -x
         dependent="$(tfmod dependent --format=text --base="${BASE_DIR}" --module="${DIFF_FILES}")"
