--- a/.github/workflows/run-tf-dependency.yml
+++ b/.github/workflows/run-tf-dependency.yml
@@ -1,4 +1,4 @@
-name: Test tfmod
+name: Test tf-dependency
 on:
   workflow_dispatch:
   pull_request:
@@ -29,22 +29,22 @@ jobs:
 
       - name: Exercise
         id: exercise
-        uses: ./.github/actions/tfmod-action/
+        uses: ./.github/actions/tf-dependency-action/
 
       - name: Run dependent foo
         run: |
           set -x
-          tfmod dependent --format=json --base="${GITHUB_WORKSPACE}" --module="testdata/terraform/module/foo" | jq .
+          tfmod dependent --format=json --module="${GITHUB_WORKSPACE}/testdata/terraform/module/foo" | jq .
 
       - name: Run dependent bar
         run: |
           set -x
-          tfmod dependent --format=json --base="${GITHUB_WORKSPACE}" --module="testdata/terraform/module/bar" | jq .
+          tfmod dependent --format=json --module="${GITHUB_WORKSPACE}/testdata/terraform/module/bar" | jq .
 
       - name: Run dependent baz
         run: |
           set -x
-          tfmod dependent --format=json --base="${GITHUB_WORKSPACE}" --module="testdata/terraform/module/baz" | jq .
+          tfmod dependent --format=json --module="${GITHUB_WORKSPACE}/testdata/terraform/module/baz" | jq .
 
       - name: Run dependent download
         run: |
