--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,51 +27,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Tree
-        run: |
-          set -x
-          tree "${GITHUB_WORKSPACE}" -d
-
-      - name: Tf dir
-        run: |
-          set -x
-          find "${GITHUB_WORKSPACE}" -maxdepth 5 -name '*.tf' -exec dirname {} \; | sort -u
-
-      - name: Git diff
-        id: diff
-        env:
-          DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
-        run: |
-          echo "::group::Git diff"
-          set -x
-          logfile="${RUNNER_TEMP}/git-diff-${GITHUB_ACTION:-${RANDOM}}.log"
-          commits="origin/${DEFAULT_BRANCH}...HEAD"
-          git --no-pager diff "${commits}" --name-only --no-color | xargs dirname | sort -u | tee -a "${logfile}"
-          echo "files=$(tr '\n' ',' <"${logfile}" | sed 's/,$//')" >> "${GITHUB_OUTPUT}"
-          echo "::endgroup::"
-
       - name: Exercise
         id: exercise
         uses: ./.github/actions/tf-dependency-action/
         with:
-          modules: ${{ steps.diff.outputs.files }}
+          modules: "testdata/terraform/module/bar"
 
-      - name: Run dependent download
+      - name: Verify
+        env:
+          DIRS: ${{ steps.exercise.outputs.dirs }}
         run: |
           set -x
-          tfmod download --base="${GITHUB_WORKSPACE}" --format=json --debug | jq .
-
-      - name: Run dependent foo
-        run: |
-          set -x
-          tfmod dependent --format=json --base="${GITHUB_WORKSPACE}" --module="testdata/terraform/module/foo" --debug
-
-      - name: Run dependent bar
-        run: |
-          set -x
-          tfmod dependent --format=json --base="${GITHUB_WORKSPACE}" --module="testdata/terraform/module/bar" --debug | jq .
-
-      - name: Run dependent baz
-        run: |
-          set -x
-          tfmod dependent --format=json --base="${GITHUB_WORKSPACE}" --module="testdata/terraform/module/baz" --debug | jq .
+          test "${DIRS}" = "testdata/terraform/env/prd"
