--- a/.github/actions/tf-dependency-action/action.yml
+++ b/.github/actions/tf-dependency-action/action.yml
@@ -63,7 +63,7 @@ runs:
       run: |
         echo "::group::Run tfmod download"
         set -x
-        tfmod download --debug --format=json --base="${BASE_DIR}" | jq .
+        tfmod download --debug --format=text --base="${BASE_DIR}"
         echo "::endgroup::"
       shell: bash
 
@@ -75,7 +75,7 @@ runs:
       run: |
         echo "::group::Run tfmod dependent"
         set -x
-        dirs="$(tfmod dependent --debug --format=json --base="${BASE_DIR}" --module="${MODULES}")"
+        dirs="$(tfmod dependent --debug --format=text --base="${BASE_DIR}" --module="${MODULES}")"
         echo "dirs=${dirs}" >> "${GITHUB_OUTPUT}"
         echo "::endgroup::"
       shell: bash
