--- a/.github/workflows/_internal-release.yml
+++ b/.github/workflows/_internal-release.yml
@@ -2,7 +2,7 @@ name: Internal Release
 on:
   workflow_dispatch:
     inputs:
-      level:
+      bump-level:
         type: choice
         required: true
         description: Bump up to [patch / minor / major]
@@ -18,8 +18,9 @@ permissions: {}
 
 jobs:
   call:
-    uses: ./.github/workflows/github-releases.yml
+    uses: ./.github/workflows/go.yml
+#    uses: ./.github/workflows/github-releases.yml
     with:
-      level: ${{ inputs.level }}
+      bump-level: ${{ inputs.bump-level }}
     permissions:
       contents: write
