--- a/.github/workflows/_internal-test-github-actions.yml
+++ b/.github/workflows/_internal-test-github-actions.yml
@@ -72,7 +72,7 @@ jobs:
 
   exercise:
     needs: [setup]
-    uses: ./.github/workflows/github-actions.yml
+    uses: tmknom/merge-workflows/.github/workflows/github-actions.yml@feat/add-github-actions-workflow
     with:
       pull-request: ${{ needs.setup.outputs.pr-branch }}
       github-actor: ${{ github.repository_owner }}
