chore: update workflows

--- a/.github/workflows/jwt.yml
+++ b/.github/workflows/jwt.yml
@@ -5,8 +5,8 @@ on:
 
 jobs:
   call:
-    uses: ./.github/workflows/reusable-jwt.yml
-    # uses: tmknom/playground-workflows/.github/workflows/reusable-jwt.yml@087a383ebd6a0b4b27be82fffd6cbde2c50268d6
+    # uses: ./.github/workflows/reusable-jwt.yml
+    uses: tmknom/playground-workflows/.github/workflows/reusable-jwt.yml@3dce5bbde77ff5080b1daf86b9499544d8cb2a37
     permissions:
       contents: read
       id-token: write
