--- a/action.yml
+++ b/action.yml
@@ -1,107 +1,65 @@
-name: Tf dependency
+name: PR Label Bump Version
 description: |
-  This action discovers the Terraform state directories that use the specified local modules.
-  A "state directory" is where you run `terraform plan` or `terraform apply`.
-  It usually contains the `terraform.tfstate` file.
-
-  For example, if you modify a Terraform local module, you can see which state directories are affected.
-  With this action, you can easily identify relationships in your Terraform configurations,
-  making it easier to manage changes and understand their impacts.
+  Automatically determines the semantic version bump level (minor, patch, or none)
+  based on labels attached to merged pull requests since the latest Git tag.
 
   ## Usage
 
   ```yaml
     steps:
-      - name: Tf dependency
-        uses: tmknom/tf-dependency-action@v0
-        with:
-          modules: module/foo,module/bar
+      - name: PR Label Bump Version
+        uses: tmknom/pr-label-bump-version-action@v0
   ```
 
-inputs:
-  modules:
-    required: false
-    description: Paths of files or directories that might be Terraform modules.
-  base-dir:
-    default: ${{ github.workspace }}
-    required: false
-    description: The base directory that contains the state directories and module directories.
-
 outputs:
-  dirs:
-    value: ${{ steps.dependent.outputs.dirs }}
-    description: The state directories that use the specified modules.
+  level:
+    value: ${{ steps.determine.outputs.level }}
+    description: The determined version bump level based on PR labels.
 
 runs:
   using: composite
 
   steps:
-    - name: Traceable Identifier
-      id: traceable
-      uses: tmknom/traceable-identifier-action@6555160c543eb771a876fb4ceaecd43ec79df7b6 # v0.1.0
+    - name: Git tag version
+      id: tag
+      run: |
+        echo "::group::Git tag version"
+        set -x
+        git fetch --tags
+        tag="$(git tag --sort=-v:refname | head -1)"
+        echo "version=${tag}" >> "${GITHUB_OUTPUT}"
+        echo "::endgroup::"
+      shell: bash
 
-    - name: Git diff
-      id: diff
-      if: ${{ inputs.modules == '' }}
+    - name: Determine level
+      id: determine
       env:
-        IDENTIFIER: ${{ steps.traceable.outputs.identifier }}
+        CURRENT_VERSION: ${{ steps.tag.outputs.version }}
         DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
+        GITHUB_TOKEN: ${{ github.token }}
       run: |
-        echo "::group::Git diff"
+        echo "::group::Determine level"
         set -x
-        tmpfile="${RUNNER_TEMP}/${GITHUB_ACTION}-${IDENTIFIER}.log"
-        commits="origin/${DEFAULT_BRANCH}...HEAD"
-        git --no-pager diff "${commits}" --name-only --no-color | xargs dirname | sort -u | tee -a "${tmpfile}"
-        echo "dirs=$(tr '\n' ',' <"${tmpfile}" | sed 's/,$//')" >> "${GITHUB_OUTPUT}"
-        echo "::endgroup::"
-      shell: bash
+        range="${DEFAULT_BRANCH}"
+        if [[ "${CURRENT_VERSION}" != "" ]]; then
+          range="${CURRENT_VERSION}..origin/${DEFAULT_BRANCH}"
+        fi
 
-    - name: Get latest tfmod version
-      id: latest
-      run: |
-        echo "::group::Get latest tfmod version"
-        set -x
-        version="$(grep tfmod <"${GITHUB_ACTION_PATH}/go.mod" | cut -d ' ' -f 3)"
-        echo "version=${version}" >> "${GITHUB_OUTPUT}"
-        echo "::endgroup::"
-      shell: bash
+        messages="$(git log "${range}" --merges --pretty='format:%s')"
+        numbers=$(grep -oE '#[0-9]+' <<<"${messages}" | sed 's/#//g' | sort -u)
 
-    - name: Install tfmod
-      env:
-        VERSION: ${{ steps.latest.outputs.version }}
-        BASE_URL: https://github.com/tmknom/tfmod/releases/download
-      run: |
-        echo "::group::Install tfmod"
-        set -x
-        url="${BASE_URL}/${VERSION}/tfmod_Linux_x86_64.tar.gz"
-        bin_path="${RUNNER_TEMP}/${GITHUB_ACTION}/bin"
-        mkdir -p "${bin_path}"
-
-        curl -sSL -o "${bin_path}/tfmod.tar.gz" "${url}"
-        tar -zxvf "${bin_path}/tfmod.tar.gz" -C "${bin_path}"
-        echo "${bin_path}" >> "${GITHUB_PATH}"
-        echo "::endgroup::"
-      shell: bash
-
-    - name: Run tfmod download
-      env:
-        BASE_DIR: ${{ inputs.base-dir }}
-      run: |
-        echo "::group::Run tfmod download"
-        set -x
-        tfmod download --debug --format=text --base="${BASE_DIR}"
-        echo "::endgroup::"
-      shell: bash
-
-    - name: Run tfmod dependent
-      id: dependent
-      env:
-        BASE_DIR: ${{ inputs.base-dir }}
-        MODULES: ${{ inputs.modules || steps.diff.outputs.dirs }}
-      run: |
-        echo "::group::Run tfmod dependent"
-        set -x
-        dirs="$(tfmod dependent --debug --format=text --base="${BASE_DIR}" --module="${MODULES}")"
-        echo "dirs=${dirs}" >> "${GITHUB_OUTPUT}"
+        level="none"
+        mapfile -t prs <<<"${numbers}"
+        for pr in "${prs[@]}"; do
+          labels="$(gh pr view "${pr}" --json labels --jq '.labels[].name')"
+          if grep -Eqx "enhancement" <<<"${labels}"; then
+            level="minor"
+            break
+          elif grep -Eqx "bug|dependencies" <<<"${labels}"; then
+            level="patch"
+            # Note: Do not break; a higher-priority label may still appear.
+          fi
+        done
+        echo "level=${level}" >> "${GITHUB_OUTPUT}"
         echo "::endgroup::"
       shell: bash
