feat: update workflows

--- a/.github/workflows/github-releases.yml
+++ b/.github/workflows/github-releases.yml
@@ -25,16 +25,16 @@ jobs:
         with:
           fetch-depth: 100
 
-      - name: PR Label Bump Version
-        id: pr-label
+      - name: Determine Version Level
+        id: determine
         if: ${{ inputs.bump-level == 'auto' }}
-        uses: tmknom/pr-label-bump-version-action@f7bc41b17e98d6b258c7d4add4c789ad01c9964b # v0.1.0
+        uses: tmknom/determine-version-level-action@ca30855e2a5046c5098eea8c423eeddd80da2e46 # v0.1.0
 
       - name: Bump Version
         id: bump
         uses: tmknom/bump-version-action@87bed7f224292cab5b46a4cae9897bbf64153f00 # v0.2.1
         with:
-          bump-level: ${{ steps.pr-label.outputs.level || inputs.bump-level }}
+          bump-level: ${{ steps.determine.outputs.level || inputs.bump-level }}
 
       - name: Push Version Tag
         uses: tmknom/push-version-tag-action@a9d1b46f9c29d3db510771452257b228bfd8a33f # v0.1.1
