--- a/.github/workflows/github-releases.yml
+++ b/.github/workflows/github-releases.yml
@@ -34,7 +34,7 @@ jobs:
         id: bump
         uses: tmknom/bump-version-action@87bed7f224292cab5b46a4cae9897bbf64153f00 # v0.2.1
         with:
-          bump-level: ${{ steps.determine.outputs.level || inputs.bump-level }}
+          bump-level: ${{ steps.determine.outputs.bump-level || inputs.bump-level }}
 
       - name: Push Version Tag
         uses: tmknom/push-version-tag-action@a9d1b46f9c29d3db510771452257b228bfd8a33f # v0.1.1
