--- a/action.yml
+++ b/action.yml
@@ -1,20 +1,20 @@
-name: PR Label Bump Version
+name: Determine Version Level
 description: |
-  Automatically determines the semantic version bump level (minor, patch, or none)
-  based on labels attached to merged pull requests since the latest Git tag.
+  Automatically determines the version bump level (`minor`, `patch`, or `none`)
+  from labels on merged pull requests since the last Git tag.
 
   ## Usage
 
   ```yaml
     steps:
-      - name: PR Label Bump Version
-        uses: tmknom/pr-label-bump-version-action@v0
+      - name: Determine Version Level
+        uses: tmknom/determine-version-level-action@v0
   ```
 
 outputs:
-  level:
+  bump-level:
     value: ${{ steps.determine.outputs.level }}
-    description: The determined version bump level based on PR labels.
+    description: The determined version bump level (`minor`, `patch`, or `none`).
 
 runs:
   using: composite
@@ -31,24 +31,29 @@ runs:
         echo "::endgroup::"
       shell: bash
 
-    - name: Determine level
+    - name: Determine version level
       id: determine
       env:
         CURRENT_VERSION: ${{ steps.tag.outputs.version }}
         DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
         GITHUB_TOKEN: ${{ github.token }}
       run: |
-        echo "::group::Determine level"
+        echo "::group::Determine version level"
         set -x
-        range="${DEFAULT_BRANCH}"
+        range="origin/${DEFAULT_BRANCH}"
         if [[ "${CURRENT_VERSION}" != "" ]]; then
           range="${CURRENT_VERSION}..origin/${DEFAULT_BRANCH}"
         fi
 
         messages="$(git log "${range}" --merges --pretty='format:%s')"
-        numbers=$(grep -oE '#[0-9]+' <<<"${messages}" | sed 's/#//g' | sort -u)
+        numbers=$(grep -oE '#[0-9]+' <<<"${messages}" | sed 's/#//g' | sort -u || true)
 
         level="none"
+        if [[ "${numbers}" == "" ]]; then
+          echo "level=${level}" >> "${GITHUB_OUTPUT}"
+          exit 0
+        fi
+
         mapfile -t prs <<<"${numbers}"
         for pr in "${prs[@]}"; do
           labels="$(gh pr view "${pr}" --json labels --jq '.labels[].name')"
