chore: update workflows

--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ description: |
 
 outputs:
   bump-level:
-    value: ${{ steps.determine.outputs.level }}
+    value: ${{ steps.determine.outputs.level || 'none' }}
     description: The determined version bump level (`minor`, `patch`, or `none`).
 
 runs:
@@ -31,40 +31,43 @@ runs:
         echo "::endgroup::"
       shell: bash
 
-    - name: Determine version level
-      id: determine
+    - name: Filter pull requests
+      id: filter
       env:
         CURRENT_VERSION: ${{ steps.tag.outputs.version }}
-        DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
+        DEFAULT_BRANCH: origin/${{ github.event.repository.default_branch }}
+      run: |
+        echo "::group::Filter pull requests"
+        set -x
+        range="${DEFAULT_BRANCH}"
+        if [[ "${CURRENT_VERSION}" != "" ]]; then
+          range="${CURRENT_VERSION}..${DEFAULT_BRANCH}"
+        fi
+
+        commits="$(git log "${range}" --merges --pretty='format:%s')"
+        numbers="$(grep -oE '#[0-9]+' <<<"${commits}" | sed 's/#//g' | sort -u | tr '\n' ' ' || true)"
+        echo "pull-requests=${numbers}" >> "${GITHUB_OUTPUT}"
+        echo "::endgroup::"
+      shell: bash
+
+    - name: Determine version level
+      id: determine
+      if: ${{ steps.filter.outputs.pull-requests != '' }}
+      env:
+        PULL_REQUESTS: ${{ steps.filter.outputs.pull-requests }}
         GITHUB_TOKEN: ${{ github.token }}
       run: |
         echo "::group::Determine version level"
         set -x
-        range="origin/${DEFAULT_BRANCH}"
-        if [[ "${CURRENT_VERSION}" != "" ]]; then
-          range="${CURRENT_VERSION}..origin/${DEFAULT_BRANCH}"
+        IFS=$' ' read -ra prs <<<"${PULL_REQUESTS}"
+        query="$(printf ' OR %s' "${prs[@]}")"
+        labels="$(gh pr list --search "${query:4}" --limit 100 --state merged --json labels --jq '.[].labels[].name' | sort -u)"
+
+        if grep -Eqx "enhancement" <<<"${labels}"; then
+          level="minor"
+        elif grep -Eqx "bug|dependencies" <<<"${labels}"; then
+          level="patch"
         fi
-
-        messages="$(git log "${range}" --merges --pretty='format:%s')"
-        numbers=$(grep -oE '#[0-9]+' <<<"${messages}" | sed 's/#//g' | sort -u || true)
-
-        level="none"
-        if [[ "${numbers}" == "" ]]; then
-          echo "level=${level}" >> "${GITHUB_OUTPUT}"
-          exit 0
-        fi
-
-        mapfile -t prs <<<"${numbers}"
-        for pr in "${prs[@]}"; do
-          labels="$(gh pr view "${pr}" --json labels --jq '.labels[].name')"
-          if grep -Eqx "enhancement" <<<"${labels}"; then
-            level="minor"
-            break
-          elif grep -Eqx "bug|dependencies" <<<"${labels}"; then
-            level="patch"
-            # Note: Do not break; a higher-priority label may still appear.
-          fi
-        done
         echo "level=${level}" >> "${GITHUB_OUTPUT}"
         echo "::endgroup::"
       shell: bash
