--- a/.github/workflows/release-yamllint.yml
+++ b/.github/workflows/release-yamllint.yml
@@ -28,15 +28,15 @@ jobs:
       - name: Extract version
         id: extract
         run: |
-          version="$(cut -d '=' -f 3 yamllint/requirements.txt)"
+          version="$(cut -d '=' -f 3 "test-yamllint/requirements.txt")"
           echo "version=${version}" >> "${GITHUB_OUTPUT}"
 
   release:
     needs: [extract]
     uses: ./.github/workflows/reusable-release.yml
     with:
-      name: yamllint
-      description: Dockernized yamllint, it's a linter for YAML files.
+      name: test-yamllint
+      description: Dockernized test-yamllint, it's a linter for YAML files.
       version: ${{ needs.extract.outputs.version }}
       push: ${{ inputs.push }}
     secrets:
