--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,6 +1,4 @@
-ARG PYTHON_VERSION=3.13
-
-FROM python:${PYTHON_VERSION}-alpine3.20
+FROM node:22-alpine3.21
 
 # Setup nonroot user
 RUN set -x && \
@@ -8,16 +6,16 @@ RUN set -x && \
     adduser -G nonroot -s /bin/sh -D nonroot
 
 # Install tools
-ENV ENTRYPOINT="yamllint"
+ENV ENTRYPOINT prettier
 USER nonroot
 WORKDIR /home/nonroot
-COPY --chown=nonroot:nonroot requirements.txt .
+COPY --chown=nonroot:nonroot package.json .
 COPY --chown=nonroot:nonroot entrypoint.sh .
 RUN set -x && \
-    pip install --no-cache-dir --user -r ./requirements.txt
+    npm install && \
+    npm cache clean --force
 
 # Configure runtime
 WORKDIR /work
-ENV PATH="/home/nonroot/.local/bin:${PATH}"
-ENV PYTHONPATH="/home/nonroot/.local/lib/python${PYTHON_VERSION}/site-packages"
+ENV PATH="/home/nonroot/node_modules/.bin:${PATH}"
 ENTRYPOINT ["/home/nonroot/entrypoint.sh"]
