chore: update workflows

--- a/.github/workflows/test-prettier.yml
+++ b/.github/workflows/test-prettier.yml
@@ -1,8 +1,8 @@
-name: Test yamllint
+name: Test prettier
 on:
   workflow_dispatch:
   pull_request:
-    paths: ["yamllint/*", ".github/workflows/test-yamllint.yml"]
+    paths: ["prettier/*", ".github/workflows/test-prettier.yml"]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,7 +28,7 @@ jobs:
       - name: Setup
         run: |
           set -x
-          docker build -t local/sut test-yamllint/
+          docker build -t local/sut test/
 
           cat <<EOF > test.yml
           ---
@@ -66,7 +66,7 @@ jobs:
       - name: Setup
         run: |
           set -x
-          docker build -t local/sut test-yamllint/
+          docker build -t local/sut test/
 
           cat <<EOF > test.yml
           ---
